--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Assets/Authentication/mysql_auth_infectiondefender.txt
+Assets/Authentication/mysql_auth_infectiondefender.txt.meta
